change some data

--- a/divisiones.html
+++ b/divisiones.html
@@ -91,9 +91,8 @@
                 <div class="d-flex h-100">
                     <div class="project-text w-100 my-auto text-center text-lg-right">
                         <h4 class="text-dark">División Papel</h4>
-                        <p class="mb-0 text-dark-50">Fabrica los rollos industriales de papel kraft para empaque y embalaje, lo anterior a partir del reciclaje de fibra secundaria. Entre sus principales productos se encuentran el papel liner, médium, manila entre otros. También a partir del corte de estos productos se pueden obtener hojas de cartón y galletas.</p>
+                        <p class="mb-0 text-dark-50">Fabricamos rollos industriales de papel kraft para empaque y embalaje, lo anterior a partir del reciclaje de fibra secundaria. Entre nuestros principales productos se encuentran el papel liner, médium, manila entre otros. También a partir del corte de estos productos se pueden obtener hojas de cartón.</p>
                         <br>
-                        <p class="mb-0 text-dark-50">La integran nuestras dos plantas papeleras: Papelera Iruña en la Ciudad de México y Papelera del Nevado en la zona metropolitana de Toluca, Estado de México.</p>
                     </div>
                 </div>
             </div>
@@ -107,11 +106,10 @@
                 <div class="d-flex h-100">
                     <div class="project-text w-100 my-auto text-center text-lg-right">
                         <h4 class="text-dark">División Corrugado</h4>
-                        <p class="mb-0 text-dark-50">Fabrica cartón corrugado a partir del material que produce División Papel.</p>
+                        <p class="mb-0 text-dark-50">Fabricamos cartón corrugado a partir del material que producen otras empresas.</p>
                         <br>
-                        <p class="mb-0 text-dark-50">Entre sus productos principales están las hojas de cartón corrugado, fibra sólida, single face, cajas regulares y troqueladas, separadores, entrepaños, exhibidores, entre otros.</p>
+                        <p class="mb-0 text-dark-50">Entre nuestros productos principales están las hojas de cartón corrugado, fibra sólida, single face, cajas regulares y troqueladas, separadores, entrepaños, exhibidores, entre otros.</p>
                         <br>
-                        <p class="mb-0 text-dark-50">La integran tres empresas: Corrupack, que cuenta con una planta en el Estado de México y otra en Jalisco; Cartonera Tapatía, ubicada en Guadalajara; y Corrugados Eureka con presencia en Ciudad de México.</p>
                     </div>
                 </div>
             </div>
@@ -125,57 +123,13 @@
                 <div class="d-flex h-100">
                     <div class="project-text w-100 my-auto text-center text-lg-right">
                         <h4 class="text-dark">Transformación de Papel</h4>
-                        <p class="mb-0 text-dark-50">Transforma el papel en los cerca de 170 productos derivados del reciclado del papel, entre los que se destacan las toallas para manos interdobladas y en rollo, papel higiénico, tubos de papel, cartoncillo, papel balón, folders, etc.</p>
+                        <p class="mb-0 text-dark-50">Transformamos el papel en los cerca de 170 productos derivados del reciclado del papel, entre los que se destacan las toallas para manos interdobladas y en rollo, papel higiénico, tubos de papel, cartoncillo, papel balón, folders, etc.</p>
                         <br>
-                        <p class="mb-0 text-dark-50">Integrado por nuestra planta Beroky en la Ciudad de México, tiene presencia comercial en todo el territorio nacional.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="row gx-0 justify-content-center mb-5">
-        <div class="col-lg-6"><img class="img-fluid" src="assets/img/divisiones-05.jpg" alt="..." /></div>
-        <div class="col-lg-6 order-lg-first">
-            <div class="text-center h-100 project" style="background-color: #eae8e8">
-                <div class="d-flex h-100">
-                    <div class="project-text w-100 my-auto text-center text-lg-right">
-                        <h4 class="text-dark">División Transportes</h4>
-                        <p class="mb-0 text-dark-50">Conformado por Fletes Mastín, empresa encargada de transportar nuestros productos a través de la CDMX y su Zona Metropolitana, el Valle de Toluca, así como los estados de Jalisco y Guanajuato, principalmente.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row gx-0 justify-content-center mb-5">
-        <div class="col-lg-6"><img class="img-fluid" src="assets/img/divisiones-04.jpg" alt="..." /></div>
-        <div class="col-lg-6 order-lg-first">
-            <div class="text-center h-100 project" style="background-color: #eae8e8">
-                <div class="d-flex h-100">
-                    <div class="project-text w-100 my-auto text-center text-lg-right">
-                        <h4 class="text-dark">Administración y servicios</h4>
-                        <p class="mb-0 text-dark-50">Está integrada por Denak, la cual brinda servicios administrativos a las empresas que conforman nuestro Grupo.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-<!--    <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">-->
-<!--        <div class="col-lg-6"><img class="img-fluid" src="assets/img/divisiones-01.jpg" alt="..." /></div>-->
-<!--        <div class="col-lg-6">-->
-<!--            <div class="bg-black text-center h-100 project">-->
-<!--                <div class="d-flex h-100">-->
-<!--                    <div class="project-text w-100 my-auto text-center text-lg-left">-->
-<!--                        <h4 class="text-white">Misty</h4>-->
-<!--                        <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-
 
 </main>
 
