--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   "spaceBetween": 40
                 },
                 "1200": {
-                  "slidesPerView": 5,
+                  "slidesPerView": 3,
                   "spaceBetween": 10
                 }
               }
@@ -131,7 +131,7 @@
                 <img src="assets/img/icon-corrugado.png" class="testimonial-img" alt="">
                 <h3>División Corrugado</h3>
                 <p>
-                  <span>Fabricamos cartón corrugado a partir del material que produce División Papel.</span>
+                  <span>Fabricamos cartón corrugado a partir del material que otras empresas producen.</span>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -142,26 +142,6 @@
                 <h3>Transformación de Papel</h3>
                 <p>
                   <span>Transforman el papel kraft en los cerca de 170 productos derivados del reciclado del papel.</span>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/icon-tranportes.png" class="testimonial-img" alt="">
-                <h3>División Transportes</h3>
-                <p>
-                  <span>Se encarga de transportar nuestros productos y otras materias primas.</span>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/icon-servicios.png" class="testimonial-img" alt="">
-                <h3>Administración y servicios</h3>
-                <p>
-                  <span>Brinda soporte a todas las empresas del Grupo en diferentes áreas.</span>
                 </p>
               </div>
             </div><!-- End testimonial item -->
