--- a/productos.html
+++ b/productos.html
@@ -120,7 +120,7 @@
                 <div class="d-flex h-100">
                     <div class="project-text w-100 my-auto text-center text-lg-left">
                         <h4 class="text-dark">VENTA Y DISTRIBUCIÓN DE CAJAS Y LÁMINAS DE PAPEL CORRUGADO</h4>
-                        <p class="mb-0 text-dark-50">Comercializa la producción de Corrupack y Corrugados Eureka a lo largo de la zona metropolitana de Guadalajara, Jalisco.</p>
+                        <p class="mb-0 text-dark-50">Comercializamos la producción de otras empresas, trabajando en conjunto a lo largo de toda la República mexicana.</p>
                     </div>
                 </div>
             </div>
