--- a/contact.html
+++ b/contact.html
@@ -89,8 +89,8 @@
         <div class="container" data-aos="fade-up" data-aos-delay="100">
 
             <div class="mb-4" data-aos="fade-up" data-aos-delay="200">
-                <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div><!-- End Google Maps -->
+                <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15088.1106005543!2d-98.26699664289086!3d19.01850322582384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cfc79da31eeb8f%3A0xa9b4911391f21fd6!2s1er%20Rtno.%20Osa%20Menor%2C%2072820%20San%20Bernardino%20Tlaxcalancingo%2C%20Pue.!5e0!3m2!1ses-419!2smx!4v1734982959818!5m2!1ses-419!2smx" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </div><!-- End Google Maps -->
+
 
             <div class="row gy-4">
 
@@ -99,7 +99,7 @@
                         <i class="bi bi-geo-alt flex-shrink-0"></i>
                         <div>
                             <h3>Dirección</h3>
-                            <p>---</p>
+                            <p>1er Trno. Osa Menor, 72820 Heroica Puebla de Zaragoza, Pue.</p>
                         </div>
                     </div><!-- End Info Item -->
 
@@ -107,7 +107,7 @@
                         <i class="bi bi-telephone flex-shrink-0"></i>
                         <div>
                             <h3>Teléfono</h3>
-                            <p>---</p>
+                            <p>953-329-5506</p>
                         </div>
                     </div><!-- End Info Item -->
 
@@ -126,25 +126,25 @@
                         <div class="row gy-4">
 
                             <div class="col-md-6">
-                                <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                                <input type="text" name="name" class="form-control" placeholder="Nombre" required="">
                             </div>
 
                             <div class="col-md-6 ">
-                                <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+                                <input type="email" class="form-control" name="email" placeholder="Email" required="">
                             </div>
 
                             <div class="col-md-12">
-                                <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                                <input type="text" class="form-control" name="subject" placeholder="Asunto" required="">
                             </div>
 
                             <div class="col-md-12">
-                                <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+                                <textarea class="form-control" name="message" rows="6" placeholder="Mensaje" required=""></textarea>
                             </div>
 
                             <div class="col-md-12 text-center">
                                 <div class="loading">Loading</div>
                                 <div class="error-message"></div>
-                                <div class="sent-message">Your message has been sent. Thank you!</div>
+                                <div class="sent-message">Enviado</div>
 
                                 <button type="submit">Enviar</button>
                             </div>
